--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <hr>
                         <p><b>Issues?</b></p>
                         <p>Map requires WebGL compatible browsers - Chrome may require you <a href="https://www.howtogeek.com/412738/how-to-turn-hardware-acceleration-on-and-off-in-chrome/" target="_blank">enable hardware acceleration.</a></p>
-                        <p><a href="https://github.com/vulture-boy/pokemonRedrawn" target="_blank">Site issues? File a report on GitHub!</a></p>						
+                        <p><a href="https://github.com/retro-redrawn/KantoRedrawn" target="_blank">Site issues? File a report on GitHub!</a></p>						
 
                     </div>
                 </div>
@@ -159,8 +159,8 @@
 <script src="areas_outdoors.js"></script>
 <script src="areas_interiors.js"></script>
 <script src="areas_sevii.js"></script>
-<script src="https://vulture-boy.github.io/Retro-Redrawn-Data/ArtistData.js"></script>
-<script src="https://vulture-boy.github.io/Retro-Redrawn-Data/RedrawnArtistDataUtils.js"></script>
+<script src="https://retro-redrawn.github.io/Retro-Redrawn-Data/ArtistData.js"></script>
+<script src="https://retro-redrawn.github.io/Retro-Redrawn-Data/RedrawnArtistDataUtils.js"></script>
 <script src="implementation.js"></script>
 <script src="interactive.js"></script>
 <script src="maputils.js"></script>
